--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.3
+Date: 25. 12. 2018
+  Bugfixes:
+    - Attempt to fix the error. https://mods.factorio.com/mod/FuelTrainStop/discussion/5c1fbc78b8fe81000d4ecb15
+---------------------------------------------------------------------------------------------------
 Version: 0.16.2
 Date: 06. 08. 2018
   Changes:
