--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.4
+Date: 14. 02. 2019
+  Bugfixes:
+    - Attempt to fix the error. https://mods.factorio.com/mod/FuelTrainStop/discussion/5c65d77f478aa8000bdc044d
+---------------------------------------------------------------------------------------------------
 Version: 0.16.3
 Date: 25. 12. 2018
   Bugfixes:
