--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.1
+Date: 10. 03. 2019
+  Major Features:
+    - Release 0.17.
+---------------------------------------------------------------------------------------------------
 Version: 0.16.4
 Date: 14. 02. 2019
   Bugfixes:
