--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.3
+Date: 2019-03-30
+  Bugfixes:
+    - Fixed an error in the interface. https://mods.factorio.com/mod/ElectricTrain/discussion/5c9f8f6d9e7d35000b95c2bb
+---------------------------------------------------------------------------------------------------
 Version: 0.17.2
 Date: 2019-03-27
   Modding:
